# MOEXterminal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Codex_MOEX_Portal_Compact_Mapping.md  Codex_MOEX_Portal_HLD_LLD.md  Codex_Portal_Config_And_Architecture.md  Codex_Учебник_Как_Работать_С_Порталом.md  HOW_TO_EARN.md  MOEX_Dashboard_TZ.md  Packman_Portal_Features.md  README.md  SESSION_NOTES_2026-02-16.md  moex_funding.md  pyproject.toml
data/: backtest_data.json  consensus.json  corp_bonds.json  declared_divs.json  dividends.json  openapi.json  openapi_news.json  snapshot.json
devtools_dump_2026-02-23/: api_urls.txt  dom_structure.txt  js_state.txt  source_code.txt  websocket_messages.txt
scripts/: screenshot_dashboard.py  screenshot_packman.py
src/moex_dashboard/: app.py  config.py  models.py
src/moex_dashboard/calc/: __init__.py  arbitrage.py  cip.py  funding.py  pipeline.py  stocks.py
src/moex_dashboard/data/: futures.py  moex_api.py  perpetual.py  rates.py  spot.py
src/moex_dashboard/services/: arbitrage_service.py  dividend_service.py  funding_service.py  market_service.py  momentum_portfolio_service.py  sector_momentum_service.py
src/moex_dashboard/ui/: __init__.py  _styling.py  sidebar.py  tab_arbitrage.py  tab_curves.py  tab_relative.py  tab_stocks.py  tab_strategies.py
tests/: test_arbitrage_service.py  test_calc.py  test_dividend_service.py  test_funding_service.py  test_market_service.py  test_momentum_portfolio_service.py  test_sector_momentum_service.py
